UI: Fix checkbox alignment

--- a/src/CommonGUI/wwwroot/css/site.css
+++ b/src/CommonGUI/wwwroot/css/site.css
@@ -228,7 +228,7 @@ h4 {
 }
 
 .row-checkbox {
-    margin-top: 1.5em;
+    margin-top: 1.9em;
 }
 
 .title-bar {
